--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@types/recharts": "^1.8.29",
     "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-haptics": "~13.0.1",
     "expo-linear-gradient": "~13.0.2",
+    "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.453.0",
     "nativewind": "^4.1.21",
