--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "expo-background-fetch": "~12.0.1",
+    "expo-task-manager": "~11.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
