--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "expo-background-fetch": "~12.0.1",
-    "expo-task-manager": "~11.8.2"
+    "expo-task-manager": "~11.8.2",
+    "expo-device": "~6.0.2",
+    "expo-intent-launcher": "~11.0.1",
+    "expo-application": "~5.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
